[gd_scene load_steps=3 format=3 uid="uid://sfaydu63bjn0"]

[ext_resource type="PackedScene" uid="uid://bu5q5uy342qlm" path="res://scenes/Dice.tscn" id="1_8a5jx"]
[ext_resource type="Script" path="res://scripts/dice_results.gd" id="2_5dier"]

[node name="GameBoyar" type="Node2D"]

[node name="Dice" parent="." instance=ExtResource("1_8a5jx")]
position = Vector2(64, 64)

[node name="Dice2" parent="." instance=ExtResource("1_8a5jx")]
position = Vector2(144, 64)

[node name="Dice3" parent="." instance=ExtResource("1_8a5jx")]
position = Vector2(224, 64)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RollButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 41.0
offset_top = 247.0
offset_right = 301.0
offset_bottom = 313.0
text = "ROLL"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 55.0
offset_top = 160.0
offset_right = 288.0
offset_bottom = 223.0
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_5dier")

[connection signal="dice_finished" from="Dice" to="Control/Label" method="_on_dice_3_dice_finished"]
[connection signal="dice_finished" from="Dice2" to="Control/Label" method="_on_dice_2_dice_finished"]
[connection signal="dice_finished" from="Dice3" to="Control/Label" method="_on_dice_dice_finished"]
[connection signal="button_down" from="Control/RollButton" to="Dice" method="_on_roll_button_button_down"]
[connection signal="button_down" from="Control/RollButton" to="Dice2" method="_on_roll_button_button_down"]
[connection signal="button_down" from="Control/RollButton" to="Dice3" method="_on_roll_button_button_down"]
